the last part of the previous push, same

--- a/frontend/customerboard/about.html
+++ b/frontend/customerboard/about.html
@@ -1,52 +1,70 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hakkında - MentoriAI</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="style.css" />
-  <script src="./components/include.js"></script>
-</head>
-<body class="bg-white text-gray-800">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hakkında - MentoriAI</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css" />
+    <script src="./components/include.js"></script>
+  </head>
+  <body class="bg-white text-gray-800">
+    <!-- Header -->
+    <div data-include="components/header.html"></div>
 
-  <!-- Header -->
-  <div data-include="components/header.html"></div>
+    <!-- İçerik -->
+    <section class="max-w-5xl mx-auto px-6 py-16">
+      <h1 class="text-4xl font-extrabold text-[#E84230] text-center mb-8">
+        MentoriAI ile Tanış
+      </h1>
+      <p class="text-lg text-center max-w-3xl mx-auto mb-12">
+        MentoriAI, öğrencilerin yalnız hissettiği anlarda yanında olan,
+        motivasyon ve planlama konularında rehberlik sunan yapay zekâ destekli
+        bir mentörlük platformudur.
+      </p>
 
-  <!-- İçerik -->
-  <section class="max-w-5xl mx-auto px-6 py-16">
-    <h1 class="text-4xl font-extrabold text-[#E84230] text-center mb-8">MentoriAI ile Tanış</h1>
-    <p class="text-lg text-center max-w-3xl mx-auto mb-12">
-      MentoriAI, öğrencilerin yalnız hissettiği anlarda yanında olan, motivasyon ve planlama konularında rehberlik sunan yapay zekâ destekli bir mentörlük platformudur.
-    </p>
-
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
-      <div>
-        <h2 class="text-2xl font-semibold text-[#E84230] mb-4">Neden MentoriAI?</h2>
-        <ul class="list-disc list-inside space-y-2">
-            <li> Ruh haline özel motivasyon mesajlarıyla enerjini tazeler.</li>
-            <li> Haftalık hedeflerini, ulaşılabilir günlük adımlara dönüştürür.</li>
-            <li> Mentoriá ile sohbet imkanıyla yolculuğuna rehberlik eder.</li>
-            <li> Günlük planlama ve takip ile hedeflerine odaklanmanı sağlar.</li>
-        </ul>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+        <div>
+          <h2 class="text-2xl font-semibold text-[#E84230] mb-4">
+            Neden MentoriAI?
+          </h2>
+          <ul class="list-disc list-inside space-y-2">
+            <li>Ruh haline özel motivasyon mesajlarıyla enerjini tazeler.</li>
+            <li>
+              Haftalık hedeflerini, ulaşılabilir günlük adımlara dönüştürür.
+            </li>
+            <li>Mentoriá ile sohbet imkanıyla yolculuğuna rehberlik eder.</li>
+            <li>
+              Günlük planlama ve takip ile hedeflerine odaklanmanı sağlar.
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h2 class="text-2xl font-semibold text-[#E84230] mb-4">
+            Kimler İçin?
+          </h2>
+          <p class="leading-relaxed">
+            MentoriAI; üniversite öğrencilerinden lise son sınıf öğrencilerine
+            kadar, sınavlara, projelere, hedeflerine hazırlanan ve bu süreçte
+            desteğe ihtiyaç duyan herkes içindir. Özellikle yalnız çalışan,
+            motive olmakta zorlanan, erteleyen öğrenciler için
+            kişiselleştirilmiş bir destek platformudur.
+          </p>
+        </div>
       </div>
-      <div>
-        <h2 class="text-2xl font-semibold text-[#E84230] mb-4">Kimler İçin?</h2>
-        <p class="leading-relaxed">
-          MentoriAI; üniversite öğrencilerinden lise son sınıf öğrencilerine kadar, sınavlara, projelere, hedeflerine hazırlanan ve bu süreçte desteğe ihtiyaç duyan herkes içindir.
-          Özellikle yalnız çalışan, motive olmakta zorlanan, erteleyen öğrenciler için kişiselleştirilmiş bir destek platformudur.
+
+      <!-- Alttaki kutu -->
+      <div
+        class="mt-16 bg-[#FFF4F2] border border-[#E84230] p-6 rounded-lg text-center"
+      >
+        <p class="text-xl font-medium text-[#E84230]">
+          "Bugün hiçbir şey yapmadım" deme, MentoriAI yanında. Yarın birlikte
+          daha iyisini yapabiliriz 💖
         </p>
       </div>
-    </div>
+    </section>
 
-    <!-- Alttaki kutu -->
-    <div class="mt-16 bg-[#FFF4F2] border border-[#E84230] p-6 rounded-lg text-center">
-      <p class="text-xl font-medium text-[#E84230]">"Bugün hiçbir şey yapmadım" deme, MentoriAI yanında. Yarın birlikte daha iyisini yapabiliriz 💖</p>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <div data-include="components/footer.html"></div>
-
-</body>
+    <!-- Footer -->
+    <div data-include="components/footer.html"></div>
+  </body>
 </html>
