--- a/frontend/customerboard/signup.html
+++ b/frontend/customerboard/signup.html
@@ -1,49 +1,72 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hakkında - MentoriAI</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="style.css" />
-  <script src="./components/include.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hakkında - MentoriAI</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css" />
+    <script src="./components/include.js"></script>
     <script src="diary.js"></script>
-</head>
-<body class="bg-white text-gray-800">
+  </head>
+  <body class="bg-white text-gray-800">
+    <!-- Header -->
+    <div data-include="components/header.html"></div>
 
-  <!-- Header -->
-  <div data-include="components/header.html"></div>
+    <main
+      class="bg-white p-8 rounded-xl shadow-lg w-full max-w-md mx-auto mt-20"
+    >
+      <h2 class="text-3xl font-bold text-[#E84230] mb-6 text-center">
+        Kayıt Ol
+      </h2>
 
-<main class="bg-white p-8 rounded-xl shadow-lg w-full max-w-md mx-auto mt-20">
-  <h2 class="text-3xl font-bold text-[#E84230] mb-6 text-center">Kayıt Ol</h2>
+      <form action="/app.html" method="POST" class="space-y-4">
+        <div>
+          <label class="block mb-1 font-medium">Ad Soyad</label>
+          <input
+            type="text"
+            name="name"
+            required
+            class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#E84230]"
+          />
+        </div>
+        <div>
+          <label class="block mb-1 font-medium">E-posta</label>
+          <input
+            type="email"
+            name="email"
+            required
+            class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#E84230]"
+          />
+        </div>
+        <div>
+          <label class="block mb-1 font-medium">Şifre</label>
+          <input
+            type="password"
+            name="password"
+            required
+            class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#E84230]"
+          />
+        </div>
+        <button
+          type="submit"
+          class="w-full bg-[#E84230] text-white py-2 rounded-lg font-semibold hover:bg-[#c53623] transition"
+        >
+          Kayıt Ol
+        </button>
+      </form>
 
-  <form action="/app.html" method="POST" class="space-y-4">
-    <div>
-      <label class="block mb-1 font-medium">Ad Soyad</label>
-      <input type="text" name="name" required class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#E84230]">
-    </div>
-    <div>
-      <label class="block mb-1 font-medium">E-posta</label>
-      <input type="email" name="email" required class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#E84230]">
-    </div>
-    <div>
-      <label class="block mb-1 font-medium">Şifre</label>
-      <input type="password" name="password" required class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#E84230]">
-    </div>
-    <button type="submit" class="w-full bg-[#E84230] text-white py-2 rounded-lg font-semibold hover:bg-[#c53623] transition">
-      Kayıt Ol
-    </button>
-  </form>
+      <p class="text-center mt-4 text-sm">
+        Zaten hesabın var mı?
+        <a
+          href="./login.html"
+          class="text-[#E84230] font-semibold hover:underline"
+          >Giriş Yap</a
+        >
+      </p>
+    </main>
 
-  <p class="text-center mt-4 text-sm">
-    Zaten hesabın var mı?
-    <a href="./login.html" class="text-[#E84230] font-semibold hover:underline">Giriş Yap</a>
-  </p>
-</main>
-
-
-  <!-- Footer -->
-  <div data-include="components/footer.html"></div>
-
-</body>
+    <!-- Footer -->
+    <div data-include="components/footer.html"></div>
+  </body>
 </html>
