--- a/frontend/dashboard/mentoria.html
+++ b/frontend/dashboard/mentoria.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MentoriAI</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MentoriAI</title>
 
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Lottie -->
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-  <script src="./js/index.js"></script>
-  <script src="./components/include.js"></script>
+    <!-- Tailwind -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Lottie -->
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="./js/mentoria.js"></script>
+    <script src="./components/include.js"></script>
+    <link rel="stylesheet" href="./css/point.css" />
+  </head>
+  <body class="relative min-h-screen pb-20">
+    <!-- Header -->
+    <div data-include="./components/header.html"></div>
 
-  <!-- Arkaplan SVG -->
-  <style>
-    body {
-      background-color: #ffffff;
-      background-image: url('data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'24\' height=\'24\' viewBox=\'0 0 24 24\'%3E%3Cg fill=\'%23d6c548\' fill-opacity=\'0.54\'%3E%3Cpolygon fill-rule=\'evenodd\' points=\'8 4 12 6 8 8 6 12 4 8 0 6 4 4 6 0 8 4\'/%3E%3C/g%3E%3C/svg%3E');
-      background-repeat: repeat;
-    }
-  </style>
-</head>
-<body class="relative min-h-screen pb-20">
-
-  <!-- Header -->
-  <div data-include="./components/header.html"></div>
-
-  <!-- Animasyonlar 
+    <!-- Animasyonlar 
   <div class="fixed top-100 left-20 w-60 z-0 pointer-events-none" style="top: 200px;">
     <lottie-player src="anime4.json" background="transparent" speed="1" loop autoplay></lottie-player>
   </div>
@@ -35,44 +26,53 @@
   </div>
   -->
 
-<main class="flex justify-center mt-20 relative z-10 max-w-6xl mx-auto gap-6">
-  <!-- Chatbox -->
-  <div class="w-full max-w-md border-2 border-[#E84230] rounded-lg p-6 shadow-lg bg-white flex flex-col">
-    <h2 class="text-center text-xl font-semibold text-[#E84230] mb-4">Mentoriá</h2>
-    <div class="h-64 bg-white-50 rounded-md p-4 overflow-y-auto flex-grow mb-4">
-      <div class="mb-4 w-full">
-        <div class="bg-gray-100 p-3 rounded-md">
-          <p class="text-sm"><span class="font-semibold text-[#E84230]">Mentoriá:</span></p>
-          <p class="text-black text-sm mt-1">Merhaba! Ben Mentoriá. Sana motivasyon ve destek vermek için buradayım. İstediğin zaman bir şeyler yaz, başlayalım!</p>
+    <main class="flex justify-center mt-6 relative z-10 max-w-4xl mx-auto px-4">
+      <div
+        class="w-full border border-gray-300 rounded-2xl shadow-lg bg-white flex flex-col h-[75vh] overflow-hidden"
+      >
+        <!-- Üst Başlık -->
+        <div class="border-b border-gray-200 px-6 py-4 shrink-0">
+          <h2 class="text-xl font-semibold text-[#E84230]">Mentoriá</h2>
+          <p class="text-sm text-gray-500">Yapay zeka mentörü</p>
+        </div>
+
+        <!-- Mesajlar Alanı (scrollable) -->
+        <div id="chatArea" class="flex-1 overflow-y-auto px-6 py-4 space-y-4">
+          <!-- Varsayılan mesaj -->
+          <div class="flex">
+            <div class="bg-gray-100 p-3 rounded-md max-w-md">
+              <p class="text-sm">
+                <span class="font-semibold text-[#E84230]">Mentoriá:</span>
+              </p>
+              <p class="text-sm mt-1 text-gray-800">
+                Merhaba! Ben Mentoriá. Sana motivasyon ve destek vermek için
+                buradayım. Yazmak istediğin bir şey varsa başlayalım!
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Sabit Alt Input -->
+        <div
+          class="border-t border-gray-200 px-6 py-4 flex items-center space-x-3 shrink-0 bg-white sticky bottom-0 z-10"
+        >
+          <input
+            id="input"
+            type="text"
+            placeholder="Beni motive et..."
+            class="flex-grow border border-gray-300 rounded-lg px-4 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#E84230]"
+          />
+          <button
+            id="button"
+            class="bg-[#E84230] text-white px-5 py-2 rounded-lg text-sm hover:bg-[#c53623] transition"
+          >
+            Gönder
+          </button>
         </div>
       </div>
-      <!-- Buraya mesajlar eklenecek -->
-    </div>
-    <div class="mt-4 flex space-x-2">
-      <input id="input" type="text" placeholder="Beni motive et..." class="flex-grow border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[#E84230]" />
-      <button id="button" class="bg-[#E84230] text-white px-4 py-2 rounded-md hover:bg-[#c53623] transition">Gönder</button>
-    </div>
-  </div>
+    </main>
 
-  <!-- Günlük Plan Paneli -->
-  <div class="w-80 border-2 border-[#E84230] rounded-lg p-4 shadow-lg bg-white flex flex-col">
-    <h3 class="text-lg font-semibold text-[#E84230] mb-4 text-center">Günlük Plan</h3>
-    <ul id="daily-plan" class="flex-grow overflow-y-auto space-y-2">
-      <li class="p-2 border rounded cursor-pointer hover:bg-[#E84230] hover:text-white transition">- Sabah yürüyüşü</li>
-      <li class="p-2 border rounded cursor-pointer hover:bg-[#E84230] hover:text-white transition">- Proje çalışması</li>
-      <li class="p-2 border rounded cursor-pointer hover:bg-[#E84230] hover:text-white transition">- Online ders</li>
-      <li class="p-2 border rounded cursor-pointer hover:bg-[#E84230] hover:text-white transition">- Kitap okuma</li>
-    </ul>
-    <input id="new-task" type="text" placeholder="Yeni görev ekle..." class="border border-gray-300 rounded px-3 py-1 mt-4 focus:outline-none focus:ring-2 focus:ring-[#E84230]" />
-    <button id="add-task" class="mt-2 bg-[#E84230] text-white rounded px-4 py-2 hover:bg-[#c53623] transition">Ekle</button>
-  </div>
-</main>
-
-
-
-  <!-- Footer -->
-  <div data-include="components/footer.html"></div>
-
-</body>
+    <!-- Footer -->
+    <div data-include="components/footer.html"></div>
+  </body>
 </html>
-
