--- a/frontend/dashboard/profile.html
+++ b/frontend/dashboard/profile.html
@@ -1,64 +1,85 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MentoriAI</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MentoriAI</title>
 
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Lottie -->
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-  <script src="./components/include.js"></script>
-
-</head>
-<body class="relative min-h-screen pb-20">
-
-  <!-- Header -->
-  <div data-include="./components/header.html"></div>
+    <!-- Tailwind -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Lottie -->
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="./components/include.js"></script>
+  </head>
+  <body class="relative min-h-screen pb-20">
+    <!-- Header -->
+    <div data-include="./components/header.html"></div>
 
     <main class="max-w-4xl mx-auto mt-16 p-6 bg-white rounded-lg shadow-md">
-  <h1 class="text-3xl font-semibold text-[#E84230] mb-6 text-center">Profilim</h1>
+      <h1 class="text-3xl font-semibold text-[#E84230] mb-6 text-center">
+        Profilim
+      </h1>
 
-  <section class="flex flex-col md:flex-row items-center md:items-start space-y-6 md:space-y-0 md:space-x-12">
-    <!-- Profil Fotoğrafı -->
-    <div class="flex flex-col items-center">
-      <img src="images/image.png" alt="Profil Fotoğrafı" class="w-32 h-32 rounded-full object-cover border-4 border-[#E84230] mb-4" />
-      <button class="px-4 py-2 bg-[#E84230] text-white rounded hover:bg-[#c53623] transition">
-        Fotoğrafı Değiştir
-      </button>
-    </div>
+      <section
+        class="flex flex-col md:flex-row items-center md:items-start space-y-6 md:space-y-0 md:space-x-12"
+      >
+        <!-- Profil Fotoğrafı -->
+        <div class="flex flex-col items-center">
+          <img
+            src="images/image.png"
+            alt="Profil Fotoğrafı"
+            class="w-32 h-32 rounded-full object-cover border-4 border-[#E84230] mb-4"
+          />
+          <button
+            class="px-4 py-2 bg-[#E84230] text-white rounded hover:bg-[#c53623] transition"
+          >
+            Fotoğrafı Değiştir
+          </button>
+        </div>
 
-    <!-- Kullanıcı Bilgileri -->
-    <form class="flex-grow space-y-4">
-      <div>
-        <label for="name" class="block font-medium mb-1">Ad Soyad</label>
-        <input id="name" type="text" value="Ayşe Yılmaz" class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[#E84230]" />
-      </div>
+        <!-- Kullanıcı Bilgileri -->
+        <form class="flex-grow space-y-4">
+          <div>
+            <label for="name" class="block font-medium mb-1">Ad Soyad</label>
+            <input
+              id="name"
+              type="text"
+              value="Ayşe Yılmaz"
+              class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[#E84230]"
+            />
+          </div>
 
-      <div>
-        <label for="email" class="block font-medium mb-1">E-posta</label>
-        <input id="email" type="email" value="ayse@example.com" class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[#E84230]" />
-      </div>
+          <div>
+            <label for="email" class="block font-medium mb-1">E-posta</label>
+            <input
+              id="email"
+              type="email"
+              value="ayse@example.com"
+              class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[#E84230]"
+            />
+          </div>
 
-      <div>
-        <label for="bio" class="block font-medium mb-1">Hakkımda</label>
-        <textarea id="bio" rows="4" class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[#E84230]" placeholder="Kendinizden kısa bir şeyler yazabilirsiniz..."></textarea>
-      </div>
+          <div>
+            <label for="bio" class="block font-medium mb-1">Hakkımda</label>
+            <textarea
+              id="bio"
+              rows="4"
+              class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[#E84230]"
+              placeholder="Kendinizden kısa bir şeyler yazabilirsiniz..."
+            ></textarea>
+          </div>
 
-      <button type="submit" class="w-full bg-[#E84230] text-white py-2 rounded font-semibold hover:bg-[#c53623] transition">
-        Profili Güncelle
-      </button>
-    </form>
-  </section>
-</main>
+          <button
+            type="submit"
+            class="w-full bg-[#E84230] text-white py-2 rounded font-semibold hover:bg-[#c53623] transition"
+          >
+            Profili Güncelle
+          </button>
+        </form>
+      </section>
+    </main>
 
-
-
-
-  <!-- Footer -->
-  <div data-include="./components/footer.html"></div>
-
-</body>
+    <!-- Footer -->
+    <div data-include="./components/footer.html"></div>
+  </body>
 </html>
-
