--- a/frontend/customerboard/login.html
+++ b/frontend/customerboard/login.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css" />
     <script src="./components/include.js"></script>
-    <script src="diary.js"></script>
+    <script src="./js/login.js"></script>
   </head>
   <body class="bg-white text-gray-800">
     <!-- Header -->
@@ -20,7 +20,7 @@
         Giriş Yap
       </h2>
 
-      <form class="space-y-4">
+      <form id="loginForm" class="space-y-4">
         <div>
           <label class="block mb-1 font-medium">E-posta</label>
           <input
@@ -40,8 +40,7 @@
           />
         </div>
         <button
-          type="button"
-          onclick="window.location.href='../dashboard/dashboard.html'"
+          type="submit"
           class="w-full bg-[#E84230] text-white py-2 rounded-lg font-semibold hover:bg-[#c53623] transition"
         >
           Giriş Yap
