--- a/frontend/dashboard/planning.html
+++ b/frontend/dashboard/planning.html
@@ -90,7 +90,10 @@
     </nav>
 
     <!-- İçerik Alanı -->
-    <main id="tab-content" class="flex-grow max-w-4xl mx-auto p-6"></main>
+    <main
+      id="tab-content"
+      class="flex-grow mx-auto p-6 w-full max-w-full"
+    ></main>
 
     <!-- Yıldızlı Mentoriá Butonu -->
     <div id="starButton" class="fixed bottom-4 right-4 z-50 group">
