--- a/frontend/dashboard/mentoria.html
+++ b/frontend/dashboard/mentoria.html
@@ -12,6 +12,7 @@
     <script src="./js/mentoria.js"></script>
     <script src="./components/include.js"></script>
     <link rel="stylesheet" href="./css/point.css" />
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   </head>
   <body class="relative min-h-screen pb-20">
     <!-- Header -->
