--- a/frontend/dashboard/mentoria.html
+++ b/frontend/dashboard/mentoria.html
@@ -32,9 +32,19 @@
         class="w-full border border-gray-300 rounded-2xl shadow-lg bg-white flex flex-col h-[75vh] overflow-hidden"
       >
         <!-- Üst Başlık -->
-        <div class="border-b border-gray-200 px-6 py-4 shrink-0">
-          <h2 class="text-xl font-semibold text-[#E84230]">Mentoriá</h2>
-          <p class="text-sm text-gray-500">Yapay zeka mentörü</p>
+        <div
+          class="border-b border-gray-200 px-6 py-4 shrink-0 flex justify-between items-center"
+        >
+          <div>
+            <h2 class="text-xl font-semibold text-[#E84230]">Mentoriá</h2>
+            <p class="text-sm text-gray-500">Yapay zeka mentörü</p>
+          </div>
+          <button
+            id="clearChat"
+            class="text-sm text-[#E84230] border border-[#E84230] px-3 py-1 rounded-md hover:bg-[#E84230] hover:text-white transition"
+          >
+            Sohbeti Sil
+          </button>
         </div>
 
         <!-- Mesajlar Alanı (scrollable) -->
