Commit 13: Profile hakkımda kısmı eklenebiliyor ve profil güncellenebiliyor, profil bilgileri de artık databaseden alınıyor.

--- a/frontend/dashboard/profile.html
+++ b/frontend/dashboard/profile.html
@@ -10,7 +10,9 @@
     <!-- Lottie -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="./components/include.js"></script>
+    <script src="./js/profile.js"></script>
   </head>
+
   <body class="relative min-h-screen pb-20">
     <!-- Header -->
     <div data-include="./components/header.html"></div>
