--- a/frontend/dashboard/about.html
+++ b/frontend/dashboard/about.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hakkında - MentoriAI</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css" />
     <script src="./components/include.js"></script>
+    <script src="./js/header.js"></script>
   </head>
   <body class="bg-white text-gray-800">
     <!-- Header -->
