--- a/frontend/dashboard/calendar.html
+++ b/frontend/dashboard/calendar.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="./components/include.js"></script>
     <script src="diary.js"></script>
+    <script src="./js/header.js"></script>
   </head>
   <body class="bg-white text-gray-800">
     <!-- Header -->
