--- a/frontend/dashboard/mentoria.html
+++ b/frontend/dashboard/mentoria.html
@@ -13,6 +13,7 @@
     <script src="./components/include.js"></script>
     <link rel="stylesheet" href="./css/point.css" />
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="./js/header.js"></script>
   </head>
   <body class="relative min-h-screen pb-20">
     <!-- Header -->
