--- a/frontend/dashboard/planning.html
+++ b/frontend/dashboard/planning.html
@@ -8,6 +8,7 @@
     <script src="./components/include.js"></script>
     <script src="./js/generatePlan.js"></script>
     <script src="./js/planning.js"></script>
+    <script src="./js/header.js"></script>
   </head>
   <body class="bg-white text-gray-800">
     <!-- Header -->
