--- a/frontend/dashboard/profile.html
+++ b/frontend/dashboard/profile.html
@@ -11,6 +11,7 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="./components/include.js"></script>
     <script src="./js/profile.js"></script>
+    <script src="./js/header.js"></script>
   </head>
 
   <body class="relative min-h-screen pb-20">
