--- a/frontend/dashboard/progress.html
+++ b/frontend/dashboard/progress.html
@@ -10,6 +10,7 @@
     <!-- Lottie -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="./components/include.js"></script>
+    <script src="./js/header.js"></script>
   </head>
   <body class="relative min-h-screen pb-20">
     <!-- Header -->
