--- a/frontend/dashboard/visionBoard.html
+++ b/frontend/dashboard/visionBoard.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="style.css" />
     <script src="./components/include.js"></script>
+    <script src="./js/header.js"></script>
   </head>
   <body class="bg-white text-gray-800">
     <!-- Header -->
